AM_CXXFLAGS = -std=c++11

lib_LTLIBRARIES = libeagel.la
libeagel_la_SOURCES =	eagel.cc eagel.hh \
						exception.cc exception.hh \
						arguments.cc arguments.hh \
						logger.cc logger.hh \
						daemon.cc daemon.hh \
						address.cc address.hh

eagel_includedir = $(includedir)/eagel
eagel_include_HEADERS = eagel.hh \
						exception.hh \
						arguments.hh \
						logger.hh \
						daemon.hh \
						address.hh